--- a/index.html
+++ b/index.html
@@ -307,6 +307,7 @@
     <!-- /.modal__dialog -->
   </div>
   <!-- /.modal -->
+  <button class="button-up">Наверх</button>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="js/main.js"></script>
 </body>
