feat: add projects secction and adaptive 768-1240+

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Yeseva+One&display=swap&subset=cyrillic" rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
   <link rel="stylesheet" href="css/style.css">
   <title>hello, world!</title>
 </head>
@@ -48,6 +49,120 @@
       <a href="#" class="hero__scroll-down">листайте вниз</a>
     </section>
     <!-- /.hero -->
+    <section class="section section--dark projects">
+      <div class="container">
+        <div class="row row--center">
+          <div class="col-40 col-40--left">
+            <div class="section-title section-title--left">
+              <h2 class="section-title__heading section-title__heading--primary projects__title">Завершенные <span class="section-title__word">проекты</span></h2>
+              <!-- /.section-title__heading -->
+              <p class="section-title__text projects__text">На сайте представлена ​​лишь небольшая часть работ, выполняемых нашей компанией. За 14 лет работы на строительном рынке мы осчастливили более 1000 семей</p>
+            </div>
+            <!-- /.section-title -->
+            <!-- Slider main container -->
+            <div class="swiper-container">
+              <!-- Additional required wrapper -->
+              <div class="swiper-wrapper swiper-no-swiping">
+                  <!-- Slides -->
+                  <div class="swiper-slide">
+                    <div class="swiper-slide__text">
+                      <h3 class="swiper-slide__heading">Город:</h3>
+                      <span class="swiper-slide__value">Ростов-на-дону<br>ЖК Адмирал</span>
+                    </div>
+                    <!-- /.swiper-slide__text -->
+                    <div class="swiper-slide__text">
+                      <h3 class="swiper-slide__heading">Площадь:</h3>
+                      <span class="swiper-slide__value">81 м<sup>2</sup></span>
+                    </div>
+                    <!-- /.swiper-slide__text -->
+                    <div class="swiper-slide__text">
+                      <h3 class="swiper-slide__heading">Срок ремонта:</h3>
+                      <span class="swiper-slide__value">3,5 месяца</span>
+                    </div>
+                    <!-- /.swiper-slide__text -->
+                    <div class="swiper-slide__text">
+                      <h3 class="swiper-slide__heading">Стоимость:</h3>
+                      <span class="swiper-slide__value">По запросу</span>
+                    </div>
+                    <!-- /.swiper-slide__text -->
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="swiper-slide__text">
+                      <h3 class="swiper-slide__heading">Город:</h3>
+                      <span class="swiper-slide__value">Ростов-на-дону<br>ЖК Адмирал</span>
+                    </div>
+                    <!-- /.swiper-slide__text -->
+                    <div class="swiper-slide__text">
+                      <h3 class="swiper-slide__heading">Площадь:</h3>
+                      <span class="swiper-slide__value">81 м<sup>2</sup></span>
+                    </div>
+                    <!-- /.swiper-slide__text -->
+                    <div class="swiper-slide__text">
+                      <h3 class="swiper-slide__heading">Срок ремонта:</h3>
+                      <span class="swiper-slide__value">3,5 месяца</span>
+                    </div>
+                    <!-- /.swiper-slide__text -->
+                    <div class="swiper-slide__text">
+                      <h3 class="swiper-slide__heading">Стоимость:</h3>
+                      <span class="swiper-slide__value">По запросу</span>
+                    </div>
+                    <!-- /.swiper-slide__text -->
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="swiper-slide__text">
+                      <h3 class="swiper-slide__heading">Город:</h3>
+                      <span class="swiper-slide__value">Ростов-на-дону<br>ЖК Адмирал</span>
+                    </div>
+                    <!-- /.swiper-slide__text -->
+                    <div class="swiper-slide__text">
+                      <h3 class="swiper-slide__heading">Площадь:</h3>
+                      <span class="swiper-slide__value">81 м<sup>2</sup></span>
+                    </div>
+                    <!-- /.swiper-slide__text -->
+                    <div class="swiper-slide__text">
+                      <h3 class="swiper-slide__heading">Срок ремонта:</h3>
+                      <span class="swiper-slide__value">3,5 месяца</span>
+                    </div>
+                    <!-- /.swiper-slide__text -->
+                    <div class="swiper-slide__text">
+                      <h3 class="swiper-slide__heading">Стоимость:</h3>
+                      <span class="swiper-slide__value">По запросу</span>
+                    </div>
+                    <!-- /.swiper-slide__text -->
+                  </div>
+              </div>
+              <!-- If we need navigation buttons -->
+              <div class="swiper-button-prev"></div>
+              <div class="swiper-pagination"></div>
+              <div class="swiper-button-next"></div>
+            </div>
+          </div>
+          <!-- /.col-40 -->
+          <div class="col-60 col-60--top">
+            <!-- Slider main container -->
+            <div class="swiper-container">
+              <!-- Additional required wrapper -->
+              <div class="swiper-wrapper swiper-no-swiping">
+                  <!-- Slides -->
+                  <div class="swiper-slide swiper-slide--right">
+                    <img src="img/project/project.jpg" alt="">
+                  </div>
+                  <div class="swiper-slide swiper-slide--right">
+                    <img src="img/project/project.jpg" alt="">
+                  </div>
+                  <div class="swiper-slide swiper-slide--right">
+                    <img src="img/project/project.jpg" alt="">
+                  </div>
+              </div>
+            </div>
+          </div>
+          <!-- /.col-60 -->
+        </div>
+        <!-- /.row -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.section section--dark projects -->
     <section class="section control">
       <div class="container">
         <div class="section-title">
@@ -73,7 +188,7 @@
         </div>
         <!-- /.section-title -->
         <div class="row">
-          <div class="col">
+          <div class="col-32">
             <div class="card types__card">
               <img src="img/types/type-1.jpg" alt="Косметический ремонт" class="card__image">
               <div class="card__text">
@@ -103,7 +218,7 @@
             <!-- /.card -->
           </div>
           <!-- /.col -->
-          <div class="col">
+          <div class="col-32">
             <div class="card types__card">
               <img src="img/types/type-2.jpg" alt="Капитальный ремонт" class="card__image">
               <div class="card__text">
@@ -133,7 +248,7 @@
             <!-- /.card -->
           </div>
           <!-- /.col -->
-          <div class="col">
+          <div class="col-32">
             <div class="card types__card">
               <img src="img/types/type-3.jpg" alt="Дизайнерский ремонт" class="card__image">
               <div class="card__text">
@@ -184,7 +299,7 @@
         </div>
         <!-- /.section-title -->
         <div class="row">
-          <div class="col">
+          <div class="col-32">
             <div class="card design-card design__card">
               <img src="img/design/design-1.jpg" alt="Минимальный ремонт" class="card__image">
               <div class="card__text design-card__text">
@@ -208,7 +323,7 @@
             <!-- /.card -->
           </div>
           <!-- /.col -->
-          <div class="col">
+          <div class="col-32">
             <div class="card design__card">
               <img src="img/design/design-2.jpg" alt="Стандартный ремонт" class="card__image">
               <div class="card__text">
@@ -238,7 +353,7 @@
             <!-- /.card -->
           </div>
           <!-- /.col -->
-          <div class="col">
+          <div class="col-32">
             <div class="card design__card">
               <img src="img/design/design-3.jpg" alt="Полный ремонт" class="card__image">
               <div class="card__text">
@@ -309,6 +424,7 @@
   <!-- /.modal -->
   <button class="button-up">Наверх</button>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
