feat: add mobile version projects section

--- a/index.html
+++ b/index.html
@@ -51,23 +51,26 @@
     <!-- /.hero -->
     <section class="section section--dark projects">
       <div class="container">
-        <div class="row row--center">
-          <div class="col-40 col-40--left">
-            <div class="section-title section-title--left">
+        <div class="row row--center projects__row">
+          <div class="col-40 col-40--left projects__col-40">
+            <div class="section-title section-title--left projects__section-title">
               <h2 class="section-title__heading section-title__heading--primary projects__title">Завершенные <span class="section-title__word">проекты</span></h2>
               <!-- /.section-title__heading -->
               <p class="section-title__text projects__text">На сайте представлена ​​лишь небольшая часть работ, выполняемых нашей компанией. За 14 лет работы на строительном рынке мы осчастливили более 1000 семей</p>
             </div>
             <!-- /.section-title -->
+          </div>
+          <div class="col-40 col-40--left projects__col-40--order">
             <!-- Slider main container -->
-            <div class="swiper-container">
+            <div class="swiper-container swiper-container--mobile">
               <!-- Additional required wrapper -->
               <div class="swiper-wrapper swiper-no-swiping">
                   <!-- Slides -->
                   <div class="swiper-slide">
                     <div class="swiper-slide__text">
                       <h3 class="swiper-slide__heading">Город:</h3>
-                      <span class="swiper-slide__value">Ростов-на-дону<br>ЖК Адмирал</span>
+                      <span class="swiper-slide__value">Ростов-на-Дону</span>
+                      <span class="swiper-slide__value swiper-slide__value--margin ">ЖК Адмирал</span>
                     </div>
                     <!-- /.swiper-slide__text -->
                     <div class="swiper-slide__text">
@@ -89,7 +92,8 @@
                   <div class="swiper-slide">
                     <div class="swiper-slide__text">
                       <h3 class="swiper-slide__heading">Город:</h3>
-                      <span class="swiper-slide__value">Ростов-на-дону<br>ЖК Адмирал</span>
+                      <span class="swiper-slide__value">Ростов-на-дону</span>
+                      <span class="swiper-slide__value swiper-slide__value--margin ">ЖК Адмирал</span>
                     </div>
                     <!-- /.swiper-slide__text -->
                     <div class="swiper-slide__text">
@@ -111,7 +115,8 @@
                   <div class="swiper-slide">
                     <div class="swiper-slide__text">
                       <h3 class="swiper-slide__heading">Город:</h3>
-                      <span class="swiper-slide__value">Ростов-на-дону<br>ЖК Адмирал</span>
+                      <span class="swiper-slide__value">Ростов-на-дону</span>
+                      <span class="swiper-slide__value swiper-slide__value--margin ">ЖК Адмирал</span>
                     </div>
                     <!-- /.swiper-slide__text -->
                     <div class="swiper-slide__text">
@@ -136,23 +141,36 @@
               <div class="swiper-pagination"></div>
               <div class="swiper-button-next"></div>
             </div>
-          </div>
+          </div>  
           <!-- /.col-40 -->
           <div class="col-60 col-60--top">
             <!-- Slider main container -->
-            <div class="swiper-container">
+            <div class="swiper-container swiper-container">
               <!-- Additional required wrapper -->
               <div class="swiper-wrapper swiper-no-swiping">
                   <!-- Slides -->
-                  <div class="swiper-slide swiper-slide--right">
+                  <div class="swiper-slide swiper-slide--right swiper-slide-img">
                     <img src="img/project/project.jpg" alt="">
                   </div>
-                  <div class="swiper-slide swiper-slide--right">
+                  <div class="swiper-slide swiper-slide--right swiper-slide-img">
                     <img src="img/project/project.jpg" alt="">
                   </div>
-                  <div class="swiper-slide swiper-slide--right">
+                  <div class="swiper-slide swiper-slide--right swiper-slide-img">
                     <img src="img/project/project.jpg" alt="">
                   </div>
+              </div>
+            </div>
+            <div class="swiper-container swiper-container--mobile">
+              <div class="swiper-wrapper swiper-no-swiping">
+                <div class="swiper-slide swiper-slide--right swiper-slide-img-mobile">
+                  <img src="img/project/project-mobile.jpg" alt="">
+                </div>
+                <div class="swiper-slide swiper-slide--right swiper-slide-img-mobile">
+                  <img src="img/project/project-mobile.jpg" alt="">
+                </div>
+                <div class="swiper-slide swiper-slide--right swiper-slide-img-mobile">
+                  <img src="img/project/project-mobile.jpg" alt="">
+                </div>
               </div>
             </div>
           </div>
