--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Yeseva+One&display=swap&subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
+  <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="css/style.css">
   <title>hello, world!</title>
 </head>
@@ -12,7 +13,7 @@
   <header class="header">
     <div class="container">
       <div class="menu">
-        <div class="logo menu__logo">Repair Design Project</div>
+        <div class="logo menu__logo wow fadeInLeft">Repair Design Project</div>
         <nav class="nav menu__nav">
           <a href="#" class="nav__item">Главная</a>
           <a href="#" class="nav__item">Проекты</a>
@@ -38,20 +39,20 @@
       </div>
       <div class="container">
         <div class="hero__content">
-          <h1 class="title hero__title">Турецкий ремонт в&nbsp;<span class="title--primary">Ростове-на-дону</span></h1>
-          <p class="hero__text">Получите готовый ремонт под ключ в срок с экономией рабочего времени до 45 дней и 20% от стоимости материалов за счет организации работы</p>
-          <button class="button hero__button button--primary" data-toggle="modal">Рассчитать стоимость</button>
-          <button class="button hero__button button--outline">Отправить заявку</button>
+          <h1 class="title hero__title wow fadeInRight" data-wow-delay="0.3s">Турецкий ремонт в&nbsp;<span class="title--primary">Ростове-на-дону</span></h1>
+          <p class="hero__text wow fadeInRight" data-wow-delay="0.6s">Получите готовый ремонт под ключ в срок с экономией рабочего времени до 45 дней и 20% от стоимости материалов за счет организации работы</p>
+          <button class="button hero__button button--primary wow fadeInRight" data-wow-delay="1s" data-toggle="modal">Рассчитать стоимость</button>
+          <button class="button hero__button button--outline wow fadeInRight" data-wow-delay="1s">Отправить заявку</button>
         </div>
         <!-- /.hero__content -->
       </div>
       <!-- /.container -->
-      <a href="#" class="hero__scroll-down">листайте вниз</a>
+      <a href="#" class="hero__scroll-down wow bounce" data-wow-iteration="2" data-wow-delay="8s">листайте вниз</a>
     </section>
     <!-- /.hero -->
     <section class="section section--dark projects">
       <div class="container">
-        <div class="row row--center projects__row">
+        <div class="row row--center">
           <div class="col-40 col-40--left projects__col-40">
             <div class="section-title section-title--left projects__section-title">
               <h2 class="section-title__heading section-title__heading--primary projects__title">Завершенные <span class="section-title__word">проекты</span></h2>
@@ -59,89 +60,87 @@
               <p class="section-title__text projects__text">На сайте представлена ​​лишь небольшая часть работ, выполняемых нашей компанией. За 14 лет работы на строительном рынке мы осчастливили более 1000 семей</p>
             </div>
             <!-- /.section-title -->
-          </div>
-          <div class="col-40 col-40--left projects__col-40--order">
             <!-- Slider main container -->
-            <div class="swiper-container swiper-container--mobile">
-              <!-- Additional required wrapper -->
-              <div class="swiper-wrapper swiper-no-swiping">
-                  <!-- Slides -->
-                  <div class="swiper-slide">
-                    <div class="swiper-slide__text">
-                      <h3 class="swiper-slide__heading">Город:</h3>
-                      <span class="swiper-slide__value">Ростов-на-Дону</span>
-                      <span class="swiper-slide__value swiper-slide__value--margin ">ЖК Адмирал</span>
-                    </div>
-                    <!-- /.swiper-slide__text -->
-                    <div class="swiper-slide__text">
-                      <h3 class="swiper-slide__heading">Площадь:</h3>
-                      <span class="swiper-slide__value">81 м<sup>2</sup></span>
-                    </div>
-                    <!-- /.swiper-slide__text -->
-                    <div class="swiper-slide__text">
-                      <h3 class="swiper-slide__heading">Срок ремонта:</h3>
-                      <span class="swiper-slide__value">3,5 месяца</span>
-                    </div>
-                    <!-- /.swiper-slide__text -->
-                    <div class="swiper-slide__text">
-                      <h3 class="swiper-slide__heading">Стоимость:</h3>
-                      <span class="swiper-slide__value">По запросу</span>
-                    </div>
-                    <!-- /.swiper-slide__text -->
-                  </div>
-                  <div class="swiper-slide">
-                    <div class="swiper-slide__text">
-                      <h3 class="swiper-slide__heading">Город:</h3>
-                      <span class="swiper-slide__value">Ростов-на-дону</span>
-                      <span class="swiper-slide__value swiper-slide__value--margin ">ЖК Адмирал</span>
-                    </div>
-                    <!-- /.swiper-slide__text -->
-                    <div class="swiper-slide__text">
-                      <h3 class="swiper-slide__heading">Площадь:</h3>
-                      <span class="swiper-slide__value">81 м<sup>2</sup></span>
-                    </div>
-                    <!-- /.swiper-slide__text -->
-                    <div class="swiper-slide__text">
-                      <h3 class="swiper-slide__heading">Срок ремонта:</h3>
-                      <span class="swiper-slide__value">3,5 месяца</span>
-                    </div>
-                    <!-- /.swiper-slide__text -->
-                    <div class="swiper-slide__text">
-                      <h3 class="swiper-slide__heading">Стоимость:</h3>
-                      <span class="swiper-slide__value">По запросу</span>
-                    </div>
-                    <!-- /.swiper-slide__text -->
-                  </div>
-                  <div class="swiper-slide">
-                    <div class="swiper-slide__text">
-                      <h3 class="swiper-slide__heading">Город:</h3>
-                      <span class="swiper-slide__value">Ростов-на-дону</span>
-                      <span class="swiper-slide__value swiper-slide__value--margin ">ЖК Адмирал</span>
-                    </div>
-                    <!-- /.swiper-slide__text -->
-                    <div class="swiper-slide__text">
-                      <h3 class="swiper-slide__heading">Площадь:</h3>
-                      <span class="swiper-slide__value">81 м<sup>2</sup></span>
-                    </div>
-                    <!-- /.swiper-slide__text -->
-                    <div class="swiper-slide__text">
-                      <h3 class="swiper-slide__heading">Срок ремонта:</h3>
-                      <span class="swiper-slide__value">3,5 месяца</span>
-                    </div>
-                    <!-- /.swiper-slide__text -->
-                    <div class="swiper-slide__text">
-                      <h3 class="swiper-slide__heading">Стоимость:</h3>
-                      <span class="swiper-slide__value">По запросу</span>
-                    </div>
-                    <!-- /.swiper-slide__text -->
-                  </div>
+            <div class="swiper-container">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper swiper-no-swiping">
+              <!-- Slides -->
+              <div class="swiper-slide">
+                <div class="swiper-slide__text">
+                  <h3 class="swiper-slide__heading">Город:</h3>
+                  <span class="swiper-slide__value">Ростов-на-Дону</span>
+                  <span class="swiper-slide__value swiper-slide__value--margin">ЖК Адмирал</span>
+                </div>
+                <!-- /.swiper-slide__text -->
+                <div class="swiper-slide__text">
+                  <h3 class="swiper-slide__heading">Площадь:</h3>
+                  <span class="swiper-slide__value">81 м<sup>2</sup></span>
+                </div>
+                <!-- /.swiper-slide__text -->
+                <div class="swiper-slide__text">
+                  <h3 class="swiper-slide__heading">Срок ремонта:</h3>
+                  <span class="swiper-slide__value">3,5 месяца</span>
+                </div>
+                <!-- /.swiper-slide__text -->
+                <div class="swiper-slide__text">
+                  <h3 class="swiper-slide__heading">Стоимость:</h3>
+                  <span class="swiper-slide__value">По запросу</span>
+                </div>
+                <!-- /.swiper-slide__text -->
               </div>
-              <!-- If we need navigation buttons -->
-              <div class="swiper-button-prev"></div>
-              <div class="swiper-pagination"></div>
-              <div class="swiper-button-next"></div>
+              <div class="swiper-slide">
+                <div class="swiper-slide__text">
+                  <h3 class="swiper-slide__heading">Город:</h3>
+                  <span class="swiper-slide__value">Ростов-на-Дону</span>
+                  <span class="swiper-slide__value swiper-slide__value--margin">ЖК Адмирал</span>
+                </div>
+                <!-- /.swiper-slide__text -->
+                <div class="swiper-slide__text">
+                  <h3 class="swiper-slide__heading">Площадь:</h3>
+                  <span class="swiper-slide__value">81 м<sup>2</sup></span>
+                </div>
+                <!-- /.swiper-slide__text -->
+                <div class="swiper-slide__text">
+                  <h3 class="swiper-slide__heading">Срок ремонта:</h3>
+                  <span class="swiper-slide__value">3,5 месяца</span>
+                </div>
+                <!-- /.swiper-slide__text -->
+                <div class="swiper-slide__text">
+                  <h3 class="swiper-slide__heading">Стоимость:</h3>
+                  <span class="swiper-slide__value">По запросу</span>
+                </div>
+                <!-- /.swiper-slide__text -->
+              </div>
+              <div class="swiper-slide">
+                <div class="swiper-slide__text">
+                  <h3 class="swiper-slide__heading">Город:</h3>
+                  <span class="swiper-slide__value">Ростов-на-Дону</span>
+                  <span class="swiper-slide__value swiper-slide__value--margin">ЖК Адмирал</span>
+                </div>
+                <!-- /.swiper-slide__text -->
+                <div class="swiper-slide__text">
+                  <h3 class="swiper-slide__heading">Площадь:</h3>
+                  <span class="swiper-slide__value">81 м<sup>2</sup></span>
+                </div>
+                <!-- /.swiper-slide__text -->
+                <div class="swiper-slide__text">
+                  <h3 class="swiper-slide__heading">Срок ремонта:</h3>
+                  <span class="swiper-slide__value">3,5 месяца</span>
+                </div>
+                <!-- /.swiper-slide__text -->
+                <div class="swiper-slide__text">
+                  <h3 class="swiper-slide__heading">Стоимость:</h3>
+                  <span class="swiper-slide__value">По запросу</span>
+                </div>
+                <!-- /.swiper-slide__text -->
+              </div>
             </div>
-          </div>  
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-pagination"></div>
+            <div class="swiper-button-next"></div>
+          </div>
+          </div>
           <!-- /.col-40 -->
           <div class="col-60 col-60--top">
             <!-- Slider main container -->
@@ -160,7 +159,7 @@
                   </div>
               </div>
             </div>
-            <div class="swiper-container swiper-container--mobile">
+            <div class="swiper-container">
               <div class="swiper-wrapper swiper-no-swiping">
                 <div class="swiper-slide swiper-slide--right swiper-slide-img-mobile">
                   <img src="img/project/project-mobile.jpg" alt="">
@@ -183,15 +182,37 @@
     <!-- /.section section--dark projects -->
     <section class="section control">
       <div class="container">
-        <div class="section-title">
+        <div class="section-title control__section-title section-title--light">
           <h2 class="section-title__heading">Онлайн контроль</h2>
           <!-- /.section-title__heading -->
-          <div class="section-title__image">
+          <div class="section-title__image control__image">
             <img src="img/video.svg" alt="video">
           </div>
           <!-- /.section-title__image -->
         </div>
         <!-- /.section-title -->
+        <div class="control__video video">
+          <img src="img/play-icon.svg" alt="play icon" class="video__play">
+        </div>
+        <!-- /.control__video video -->
+        <p class="control__text wow fadeInLeft" data-wow-delay="0.1s">На каждом объекте установлена ​​камера, которая транслирует ход работы на часах. В любой момент вы можете зайти на наш сайт и следить за ходом работы в вашей квартире. Посмотрите прямую трансляцию с одного из наших объектов! Оставьте заявку ниже чтобы получить ссылку на трансляцию.</p>
+        <form action="#" class="form control__form wow fadeInRight" data-wow-delay="0.1s"">
+          <div class="control__input-group">
+            <label for="user-name" class="label form__label control__label">Имя</label>
+            <input type="text" class="input form__input control__input" id="user-name" placeholder="Как вас зовут:">
+          </div>
+          <div class="control__input-group">
+            <label for="user-phone" class="label form__label control__label">Телефон</label>
+            <input type="tel" class="input form__input control__input" id="user-phone" placeholder="Ваш номер телефона:">
+          </div>
+          <button class="button button--primary control__button button--size-lg">Отправить</button>
+          <div class="policy control__policy">
+            <input type="checkbox" name="policy-checkbox" id="policy-checkbox" class="policy__checkbox" checked>
+            <label for="policy-checkbox" class="policy__label control__policy-label">Я соглашаюсь с обработкой данных</label>
+          </div>
+          <!-- /.policy -->
+        </form>
+        <!-- /.form control__form -->
       </div>
     </section>
     <section class="section types">
@@ -423,11 +444,14 @@
       <h3 class="modal__title">Оставьте заявку и наш менеджер свяжется с вами</h3>
       <form action="#" class="form modal__form">
         <label for="user-name" class="label form__label label--light">Имя</label>
-        <input type="text" class="input form__input modal__input" id="user-name" placeholder="Как вас зовут:">
+        <input type="text" class="input form__input modal__input
+        input--light" id="user-name" placeholder="Как вас зовут:">
         <label for="user-phone" class="label form__label label--light">Телефон</label>
-        <input type="tel" class="input form__input modal__input" id="user-phone" placeholder="Ваш номер телефона:">
+        <input type="tel" class="input form__input modal__input
+        input--light" id="user-phone" placeholder="Ваш номер телефона:">
         <label for="user-email" class="label form__label label--light">Email</label>
-        <input type="email" class="input form__input modal__input" id="user-email" placeholder="Ваш email:">
+        <input type="email" class="input form__input modal__input
+        input--light" id="user-email" placeholder="Ваш email:">
         <div class="policy modal__policy">
           <input type="checkbox" name="policy-checkbox" id="policy-checkbox" class="policy__checkbox" checked>
           <label for="policy-checkbox" class="policy__label">Я соглашаюсь с обработкой данных</label>
@@ -443,6 +467,7 @@
   <button class="button-up">Наверх</button>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+  <script src="js/wow.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
