--- a/index.html
+++ b/index.html
@@ -199,11 +199,11 @@
         <form action="#" class="form control__form wow fadeInRight" data-wow-delay="0.1s"">
           <div class="control__input-group">
             <label for="user-name" class="label form__label control__label">Имя</label>
-            <input type="text" name="userName" class="input form__input control__input" id="user-name" placeholder="Как вас зовут:">
+            <input type="text" autocomplete="off" name="userName" class="input form__input control__input" id="user-name" placeholder="Как вас зовут:">
           </div>
           <div class="control__input-group">
             <label for="user-phone" class="label form__label control__label">Телефон</label>
-            <input type="tel" name="userPhone" class="input form__input control__input" id="user-phone" placeholder="Ваш номер телефона:">
+            <input type="tel" autocomplete="off" name="userPhone" class="input form__input control__input" id="user-phone" placeholder="Ваш номер телефона:">
           </div>
           <button class="button button--primary control__button">Отправить</button>
           <div class="policy control__policy">
@@ -444,24 +444,24 @@
         <h3 class="footer__title">Остались вопросы?</h3>
         <form action="#" class="form footer__form">
           <div class="input-group footer__input-group">
-            <label for="user-name" class="label form__label label--light">Имя</label>
-            <input type="text" name="userName" class="input form__input footer__input
+            <label for="user-name" class="label form__label footer__label label--light">Имя</label>
+            <input type="text" autocomplete="off" name="userName" class="input form__input footer__input
             input--light" id="user-name" placeholder="Как вас зовут:">
           </div>
           <div class="input-group footer__input-group">
-            <label for="user-phone" class="label form__label label--light">Телефон</label>
-            <input type="tel" name="userPhone" class="input form__input footer__input
+            <label for="user-phone" class="label form__label footer__label label--light">Телефон</label>
+            <input type="tel" autocomplete="off" name="userPhone" class="input form__input footer__input
             input--light" id="user-phone" placeholder="Ваш номер телефона:"></div>
           <div class="input-group footer__input-group footer__input-group--full-width">
-            <label for="user-question" class="label form__label label--light">Вопрос</label>
-            <input type="text" name="userQuestion" class="input form__input footer__input
+            <label for="user-question" class="label form__label footer__label label--light">Вопрос</label>
+            <input type="text" autocomplete="off" name="userQuestion" class="input form__input footer__input
             input--light" id="user-question" placeholder="Я хочу спросить:"></div>
           <div class="policy footer__policy">
             <input type="checkbox" name="policy-checkbox" id="footer__policy-checkbox" class="policy__checkbox" checked>
-            <label for="footer__policy-checkbox" class="policy__label policy__label--center">Я соглашаюсь с обработкой данных</label>
+            <label for="footer__policy-checkbox" class="policy__label policy__label--left policy__label--center">Я соглашаюсь на обработку данных</label>
           </div>
           <!-- /.policy -->
-          <button class="button button--primary footer__button button--size-lg">Отправить заявку</button>
+          <button class="button button--primary footer__button button--size-lg">Отправить</button>
         </form>
       </div>
     </div>
@@ -496,17 +496,17 @@
       <form action="#" class="form modal__form">
         <div class="input-group modal__input-group">
           <label for="user-name" class="label form__label label--light">Имя</label>
-          <input type="text" name="userName" class="input form__input modal__input
+          <input type="text" autocomplete="off" name="userName" class="input form__input modal__input
         input--light" id="user-name" placeholder="Как вас зовут:">
         </div>
         <div class="input-group modal__input-group">
           <label for="user-phone" class="label form__label label--light">Телефон</label>
-          <input type="tel" name="userPhone" class="input form__input modal__input
+          <input type="tel" autocomplete="off" name="userPhone" class="input form__input modal__input
         input--light" id="user-phone" placeholder="Ваш номер телефона:">
         </div>
         <div class="input-group modal__input-group">
           <label for="user-email" class="label form__label label--light">Email</label>
-          <input type="email" name="userEmail" class="input form__input modal__input
+          <input type="email" autocomplete="off" name="userEmail" class="input form__input modal__input
         input--light" id="user-email" placeholder="Ваш email:">
         </div>
         <div class="policy modal__policy">
@@ -514,7 +514,7 @@
           <label for="policy-checkbox" class="policy__label">Я соглашаюсь с обработкой данных</label>
         </div>
         <!-- /.policy -->
-        <button class="button button--primary modal__button button--size-lg">Отправить</button>
+        <button class="button button--primary modal__button button--size-lg">Отправить заявку</button>
       </form>
       <!-- /.form modal__form -->
     </div>
