feat: add team section and make adaptive

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             <div class="card types__card">
               <img src="img/types/type-1.jpg" alt="Косметический ремонт" class="card__image">
               <div class="card__text">
-                <h3 class="card__title">Косметический ремонт</h3>
+                <h3 class="card__title types-card__title">Косметический ремонт</h3>
                 <!-- /.card__title -->
                 <ul class="card__list">
                   <li class="card__item">Демонтаж старых покрытий</li>
@@ -261,7 +261,7 @@
             <div class="card types__card">
               <img src="img/types/type-2.jpg" alt="Капитальный ремонт" class="card__image">
               <div class="card__text">
-                <h3 class="card__title">Капитальный ремонт</h3>
+                <h3 class="card__title types-card__title">Капитальный ремонт</h3>
                 <!-- /.card__title -->
                 <ul class="card__list">
                   <li class="card__item">Демонтаж старых покрытий</li>
@@ -291,7 +291,7 @@
             <div class="card types__card">
               <img src="img/types/type-3.jpg" alt="Дизайнерский ремонт" class="card__image">
               <div class="card__text">
-                <h3 class="card__title">Дизайнерский ремонт</h3>
+                <h3 class="card__title types-card__title">Дизайнерский ремонт</h3>
                 <!-- /.card__title -->
                 <ul class="card__list">
                   <li class="card__item">Демонтаж старых покрытий</li>
@@ -437,6 +437,80 @@
       </div>
       <!-- /.contaier -->
     </section>
+    <section class="section team">
+      <div class="container">
+        <div class="section-title team__section-title">
+          <h2 class="section-title__heading team__heading">Наша команда</h2>
+          <!-- /.section-title__heading -->
+          <div class="section-title__image team__image">
+            <img src="img/team.svg" alt="team">
+          </div>
+          <!-- /.section-title__image -->
+          <p class="section-title__text team__text">
+            Наша команда помогла стать счастливее более чем 500 семьям, и мы не собираемся останавливаться
+          </p>
+        </div>
+        <!-- /.section-title -->
+        <div class="row team__row">
+          <div class="col-32">
+            <div class="card team-card team__card">
+              <img src="img/team/team-1.jpg" alt="Алексей Колмаков" class="card__image team-card__image">
+              <img src="img/team/team-1-mobile.jpg" alt="Алексей Колмаков" class="card__image team-card__image-mobile">
+              <div class="card__icon">
+                <img src="img/team/icon-1.svg" alt="Идея">
+              </div>
+              <div class="card__text team-card__text">
+                <h3 class="card__title team-card__title">Алексей Колмаков</h3>
+                <!-- /.card__title -->
+                <span class="card__job">Проектный менеджер</span>
+                <strong class="card__experience">Опыт работы 8 лет</strong>
+              </div>
+              <!-- /.card__text -->
+            </div>
+            <!-- /.card -->
+          </div>
+          <!-- /.col -->
+          <div class="col-32">
+            <div class="card team-card team__card">
+              <div class="card__icon">
+                <img src="img/team/icon-2.svg" alt="Дизайн">
+              </div>
+              <img src="img/team/team-2.jpg" alt="Алиса Сухорукова" class="card__image team-card__image">
+              <img src="img/team/team-2-mobile.jpg" alt="Алексей Колмаков" class="card__image team-card__image-mobile">
+              <div class="card__text team-card__text">
+                <h3 class="card__title team-card__title">Алиса Сухорукова</h3>
+                <!-- /.card__title -->
+                <span class="card__job">Дизайнер</span>
+                <strong class="card__experience">Опыт работы 6 лет</strong>
+              </div>
+              <!-- /.card__text -->
+            </div>
+            <!-- /.card -->
+          </div>
+          <!-- /.col -->
+          <div class="col-32">
+            <div class="card team-card team__card">
+              <div class="card__icon">
+                <img src="img/team/icon-3.svg" alt="Чемодан">
+              </div>
+              <img src="img/team/team-3.jpg" alt="Давид Волынев" class="card__image team-card__image">
+              <img src="img/team/team-3-mobile.jpg" alt="Алексей Колмаков" class="card__image team-card__image-mobile">
+              <div class="card__text team-card__text">
+                <h3 class="card__title team-card__title">Давид Волынев</h3>
+                <!-- /.card__title -->
+                <span class="card__job">Бригадир</span>
+                <strong class="card__experience">Опыт работы 7 лет</strong>
+              </div>
+              <!-- /.card__text -->
+            </div>
+            <!-- /.card -->
+          </div>
+          <!-- /.col -->
+        </div>
+        <!-- /.row -->
+        <p class="team__description">Каждый сотрудник нашей компании является квалифицированным штатным специалистом с опытом работы от 6 лет. У нас нет гастарбайтеров, каждый сотрудник выполняет работу, соответствующую его специальности.</p>
+      </div>  
+    </section> 
   </main>
   <footer class="footer section--dark">
     <div class="container">
