--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
   <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="css/style.css">
+  <script src="https://api-maps.yandex.ru/2.1/?apikey=ab8d2379-f0eb-45bc-a85b-2fe4bab5e946&lang=ru_RU" type="text/javascript"></script>
   <title>hello, world!</title>
 </head>
 <body>
@@ -538,6 +539,20 @@
           <button class="button button--primary footer__button button--size-lg">Отправить</button>
         </form>
       </div>
+      <div class="contacts-info">
+        <span class="contacts-info__adress">Ростов на дону, Торговый центр Plaza</span>
+        <span class="contacts-info__text-phone">Прямой телефон<a href="tel:+79997683299" class="contacts-info__phone"> +7 (999) 768-32-99</a></span>
+        <div class="contacts-info__social">
+          <a href="#" class="contacts-info__email">
+            <img src="img/email.svg" alt="Email">
+          </a>
+          <a href="#" class="contacts-info__instagram">
+            <img src="img/instagram.svg" alt="instagram">
+          </a>
+        </div>
+      </div>
+      <div class="map footer__map" id="map"></div>
+      <!-- /.map -->
     </div>
     <div class="footer__menu">
       <div class="container">
