--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
           </div>
           <button class="button button--primary control__button">Отправить</button>
           <div class="policy control__policy">
-            <input type="checkbox" name="policy-checkbox" id="control__policy-checkbox" class="policy__checkbox" checked>
+            <input type="checkbox" name="policyCheckbox" id="control__policy-checkbox" class="policy__checkbox" checked>
             <label for="control__policy-checkbox" class="policy__label control__policy-label">Я соглашаюсь с обработкой данных</label>
           </div>
           <!-- /.policy -->
@@ -473,7 +473,7 @@
           <!-- /.col -->
           <div class="col-32">
             <div class="card team-card team__card">
-              <div class="card__icon">
+              <div class="card__icon card__icon-second-mobile">
                 <img src="img/team/icon-2.svg" alt="Дизайн">
               </div>
               <img src="img/team/team-2.jpg" alt="Алиса Сухорукова" class="card__image team-card__image">
@@ -491,7 +491,7 @@
           <!-- /.col -->
           <div class="col-32">
             <div class="card team-card team__card">
-              <div class="card__icon">
+              <div class="card__icon card__icon-third-mobile">
                 <img src="img/team/icon-3.svg" alt="Чемодан">
               </div>
               <img src="img/team/team-3.jpg" alt="Давид Волынев" class="card__image team-card__image">
@@ -532,7 +532,7 @@
             <input type="text" autocomplete="off" name="userQuestion" class="input form__input footer__input
             input--light" id="user-question" placeholder="Я хочу спросить:"></div>
           <div class="policy footer__policy">
-            <input type="checkbox" name="policy-checkbox" id="footer__policy-checkbox" class="policy__checkbox" checked>
+            <input type="checkbox" name="policyCheckbox" id="footer__policy-checkbox" class="policy__checkbox" checked>
             <label for="footer__policy-checkbox" class="policy__label policy__label--left policy__label--center">Я соглашаюсь на обработку данных</label>
           </div>
           <!-- /.policy -->
@@ -599,7 +599,7 @@
         input--light" id="user-email" placeholder="Ваш email:">
         </div>
         <div class="policy modal__policy">
-          <input type="checkbox" name="policy-checkbox" id="policy-checkbox" class="policy__checkbox" checked>
+          <input type="checkbox" name="policyCheckbox" id="policy-checkbox" class="policy__checkbox" checked>
           <label for="policy-checkbox" class="policy__label">Я соглашаюсь с обработкой данных</label>
         </div>
         <!-- /.policy -->
