refact: fixed map and contacts-info and make adaptive

--- a/index.html
+++ b/index.html
@@ -533,26 +533,31 @@
             input--light" id="user-question" placeholder="Я хочу спросить:"></div>
           <div class="policy footer__policy">
             <input type="checkbox" name="policyCheckbox" id="footer__policy-checkbox" class="policy__checkbox" checked>
-            <label for="footer__policy-checkbox" class="policy__label policy__label--left policy__label--center">Я соглашаюсь на обработку данных</label>
+            <label for="footer__policy-checkbox" class="policy__label policy__label--left policy__label--center">Я соглашаюсь с обработкой данных</label>
           </div>
           <!-- /.policy -->
           <button class="button button--primary footer__button button--size-lg">Отправить</button>
         </form>
       </div>
-      <div class="contacts-info">
-        <span class="contacts-info__adress">Ростов на дону, Торговый центр Plaza</span>
-        <span class="contacts-info__text-phone">Прямой телефон<a href="tel:+79997683299" class="contacts-info__phone"> +7 (999) 768-32-99</a></span>
-        <div class="contacts-info__social">
-          <a href="#" class="contacts-info__email">
-            <img src="img/email.svg" alt="Email">
-          </a>
-          <a href="#" class="contacts-info__instagram">
-            <img src="img/instagram.svg" alt="instagram">
-          </a>
+      <div class="footer__info">
+        <div class="contacts-info">
+          <p class="contacts-info__text">
+            Ростов на дону, Торговый центр Plaza Прямой телефон<a href="tel:+79997683299" class="contacts-info__phone"> +7 (999) 768-32-99</a>
+          </p>
+          <!-- <span class="contacts-info__adress">Ростов на дону, Торговый центр Plaza</span> -->
+          <!-- <span class="contacts-info__text-phone">Прямой телефон<a href="tel:+79997683299" class="contacts-info__phone"> +7 (999) 768-32-99</a></span> -->
+          <div class="contacts-info__social">
+            <a href="#" class="contacts-info__email">
+              <img src="img/email.svg" alt="Email">
+            </a>
+            <a href="#" class="contacts-info__instagram">
+              <img src="img/instagram.svg" alt="instagram">
+            </a>
+          </div>
         </div>
+        <div class="map footer__map" id="map"></div>
+        <!-- /.map -->
       </div>
-      <div class="map footer__map" id="map"></div>
-      <!-- /.map -->
     </div>
     <div class="footer__menu">
       <div class="container">
