--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         </div>
         <!-- /.control__video video -->
         <p class="control__text wow fadeInLeft" data-wow-delay="0.1s">На каждом объекте установлена ​​камера, которая транслирует ход работы на часах. В любой момент вы можете зайти на наш сайт и следить за ходом работы в вашей квартире. Посмотрите прямую трансляцию с одного из наших объектов! Оставьте заявку ниже чтобы получить ссылку на трансляцию.</p>
-        <form action="#" class="form control__form wow fadeInRight" data-wow-delay="0.1s"">
+        <form action="send.php" method="POST" class="form control__form wow fadeInRight" data-wow-delay="0.1s"">
           <div class="control__input-group">
             <label for="user-name" class="label form__label control__label">Имя</label>
             <input type="text" autocomplete="off" name="userName" class="input form__input control__input" id="user-name" placeholder="Как вас зовут:">
@@ -517,7 +517,7 @@
     <div class="container">
       <div class="footer__wrap">
         <h3 class="footer__title">Остались вопросы?</h3>
-        <form action="#" class="form footer__form">
+        <form action="send.php" method="POST" class="form footer__form">
           <div class="input-group footer__input-group">
             <label for="user-name" class="label form__label footer__label label--light">Имя</label>
             <input type="text" autocomplete="off" name="userName" class="input form__input footer__input
